fix: fix grammar

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <body>
     <canvas id="snowfall-canvas">
-      This browser do not support canvas.
+      This browser does not support canvas.
     </canvas>
   </body>
 
